# taxi_demand_predictor

./: .gitignore  pyproject.toml
data/raw/: train-00000-of-00001.parquet
data/transformed/: ts_data_2022_01.parquet
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_ts_data_into_features_and_targets.ipynb  04_tranform_raw_data_into_features_and_targets.ipynb
src/: data.py  paths.py
