[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "AshwiniKurady",email = "ashwinikurady@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "plotly (>=6.3.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "src", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
